--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         }
     },
     "require-dev": {
+        "ext-mcrypt": "*",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     }
