--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
     "require": {
         "php": "^5.5 || ^7.0",
         "ext-mbstring": "*",
-        "ext-mcrypt": "*",
         "zendframework/zend-math": "^2.6",
         "zendframework/zend-stdlib": "^2.7 || ^3.0",
         "container-interop/container-interop": "~1.0"
+    },
+    "suggest": {
+        "ext-mcrypt": "Required for most features of Zend\\Crypt"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
